<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizResultActivity"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_result"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/red_dark"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/marvel_bold"/>

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3 / 10"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/marvel_regular"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/img_result"
        />


    <TextView
        android:id="@+id/totalScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tot_score"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimens2"
        android:fontFamily="@font/marvel_bold"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/btn_return"
        android:fontFamily="@font/marvel_regular"
        android:background="@drawable/btn_round"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/dimens"
        android:onClick="returnTop"/>


</LinearLayout>