<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimens"
    tools:context="DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnReload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/reload"
                android:padding="10dp"
                android:text="@string/btn_reload"
                android:textColor="#fff"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvHero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/marvel_bold"
                android:textAlignment="center"
                android:textColor="@color/red_light"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="@string/tv_personaje" />

            <ImageView
                android:id="@+id/imgHero"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimens2"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/marvel_bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:text="@string/tv_description"/>


            <TextView
                android:id="@+id/tvComics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="@dimen/dimens"
                android:fontFamily="@font/marvel_bold"
                android:text="@string/tv_comics"
                android:textAlignment="center"
                android:textColor="@color/red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/detailsCLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens"
                android:orientation="horizontal">

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerComics"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/marvel_bold"
                android:text="@string/tv_series"
                android:textAlignment="center"
                android:textColor="@color/red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/detailsSLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens"
                android:orientation="horizontal">

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSeries"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>